<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DrawingHelper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_flipviewY">Mirror Y</string>
    <string name="button_flipviewX">Mirror X</string>
    <string name="button_grayscale">Grayscale</string>
    <string name="button_binary">Binary &#xA;(slow!)</string>
	<string name="ImageView_desc">Image View</string>
	<string name="textView1">Treshold:</string>
    <string name="button_flashlight">Flashlight</string>
	
</resources>
